# xde-applets

./: .gitignore  .indent.pro  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.in  README.md  README.md.in  RELEASE  RELEASE.md  THANKS  TODO  TODO.in  autogen.sh  configure.ac  configure.sh  configure.template  index.md  introspect.sh
data/: Makefile.am  av-applet.desktop  bt-applet.desktop  dh-applet.desktop  hal-applet.desktop  pk-applet.desktop  sd-applet.desktop  wl-applet.desktop  xde-av-applet.desktop  xde-bt-applet.desktop  xde-dh-applet.desktop  xde-hal-applet.desktop  xde-lm-applet.desktop  xde-pk-applet.desktop  xde-sd-applet.desktop  xde-up-applet.desktop  xde-wl-applet.desktop
data/applications/: Makefile.am  xde-au-applet.desktop  xde-av-applet.desktop  xde-bl-applet.desktop  xde-bt-applet.desktop  xde-cpu-applet.desktop  xde-dh-applet.desktop  xde-hal-applet.desktop  xde-id-applet.desktop  xde-lm-applet.desktop  xde-pk-applet.desktop  xde-sd-applet.desktop  xde-up-applet.desktop  xde-wl-applet.desktop
data/autostart/: Makefile.am  xde-au-applet.desktop  xde-av-applet.desktop  xde-bl-applet.desktop  xde-bt-applet.desktop  xde-cpu-applet.desktop  xde-dh-applet.desktop  xde-hal-applet.desktop  xde-id-applet.desktop  xde-lm-applet.desktop  xde-pk-applet.desktop  xde-sd-applet.desktop  xde-up-applet.desktop  xde-wl-applet.desktop
data/icons/: Makefile.am
man/: Makefile.am  dh-applet.pod  pk-applet.pod  sd-applet.pod  xde-applets.pod  xde-au-applet.pod  xde-av-applet.pod  xde-bl-applet.pod  xde-bt-applet.pod  xde-cpu-applet.pod  xde-dh-applet.pod  xde-hal-applet.pod  xde-id-applet.pod  xde-lm-applet.pod  xde-pk-applet.pod  xde-sd-applet.pod  xde-up-applet.pod  xde-wl-applet.pod
src/: Makefile.am  av-applet.c  hal-applet.c  pk-applet.c  sd-applet.c  xde-au-applet.c  xde-av-applet.c  xde-bl-applet.c  xde-bt-applet.c  xde-cpu-applet.c  xde-dh-applet.c  xde-hal-applet.c  xde-id-applet.c  xde-lm-applet.c  xde-pk-applet.c  xde-sd-applet.c  xde-up-applet.c  xde-wl-applet.c
