
dist_autostart_DATA = \
	av-applet.desktop \
	bt-applet.desktop \
	dh-applet.desktop \
	hal-applet.desktop \
	pk-applet.desktop \
	sd-applet.desktop \
	wl-applet.desktop

dist_applications_DATA = \
	av-applet.desktop \
	bt-applet.desktop \
	dh-applet.desktop \
	hal-applet.desktop \
	pk-applet.desktop \
	sd-applet.desktop \
	wl-applet.desktop


