dist_applications_DATA = \
	xde-av-applet.desktop \
	xde-bl-applet.desktop \
	xde-bt-applet.desktop \
	xde-cpu-applet.desktop \
	xde-dh-applet.desktop \
	xde-hal-applet.desktop \
	xde-lm-applet.desktop \
	xde-pk-applet.desktop \
	xde-sd-applet.desktop \
	xde-up-applet.desktop \
	xde-wl-applet.desktop
