

dist_deviceicon_DATA = \
	chip.svg
	ram-memory.svg

dist_statusicon_DATA = \
	fan.svg \
	fan-stopped.svg \
	fan-slow.svg \
	fan-medium.svg \
	fan-fast.svg \
	fan-missing.svg \
	flame.svg \
	flame-cold.svg \
	flame-cool.svg \
	flame-warm.svg \
	flame-hot.svg \
	flame-missing.svg \
	voltmeter.svg \
	voltmeter-open.svg \
	voltmeter-low.svg \
	voltmeter-nominal.svg \
	voltmeter-high.svg \
	voltmeter-short.svg \
	voltmeter-missing.svg
